--- a/action.yml
+++ b/action.yml
@@ -13,9 +13,9 @@ inputs:
     required: false
     default: '100'
   swap-size-mb:
-    description: 'Swap space to create, in Megabytes.'
+    description: 'Zram swap space to create, in Megabytes.'
     required: false
-    default: '4096'
+    default: '16384'
   overprovision-lvm:
     description: |
       Create the LVM disk images as sparse files, making the space required for the LVM image files *appear* unused on the
@@ -175,11 +175,20 @@ runs:
           # create volume group from these pvs
           eval sudo vgcreate "${VG_NAME}" "${TMP_LOOP_DEV}" "${ROOT_LOOP_DEV}"
 
-          echo "Recreating swap"
-          # create and activate swap
-          sudo lvcreate -L "${{ inputs.swap-size-mb }}M" -n swap "${VG_NAME}"
-          sudo mkswap "/dev/mapper/${VG_NAME}-swap"
-          sudo swapon "/dev/mapper/${VG_NAME}-swap"
+          echo "Recreating swap in zram"
+          # create and activate zram swap
+          # we need linux-modules-extra-azure for zram on GitHub Action
+          # see https://lists.snapcraft.io/archives/kernel-team/2018-July/093622.html
+          if uname -r |grep azure;then
+            ZRAM_EXTRA_MODULES=linux-modules-extra-$(uname -r)
+          fi
+          sudo apt-get update -y && eval sudo apt-get install -y zram-tools $ZRAM_EXTRA_MODULES
+          sudo apt-get clean
+          sudo sed -Ee "/SIZE=/c \SIZE=${{ inputs.swap-size-mb }}" \
+            -e "/PERCENT=/c \#PERCENT=100" \
+            -e "/ALGO=/c \ALGO=lz4" \
+            -i /etc/default/zramswap
+          sudo systemctl restart zramswap.service
 
           echo "Creating build volume"
           # create and mount build volume
